Ajustes em unidade

--- a/pages/posto/unidade--editar.html
+++ b/pages/posto/unidade--editar.html
@@ -91,12 +91,12 @@
 
               <section class="card card-default mt-md">
                 <header class="card-header">
-                  <h5 class="semibold"><i class="fa fa-building-o mr-xs" aria-hidden="true"></i> Dados da unidade
+                  <h5 class="semibold"><i class="fa fa-building-o mr-xs" aria-hidden="true"></i> Dados
                   </h5>
                 </header>
                 <div class="card-block">
                   <div class="row">
-                    <div class="col-sm-4">
+                    <div class="col-sm-3">
                       <label class="form-label semibold" for="">Unidade <span
                               class="semibold text-danger h4">*</span></label>
                       <select class="select2 select2-arrow">
@@ -106,13 +106,19 @@
                         <option>Asa norte</option>
                       </select>
                     </div>
-                    <div class="col-sm-4">
+                    <div class="col-sm-3">
                       <label class="form-label semibold" for="">CNPJ</label>
                       <p>000.000.000/0000-00</p>
                     </div>
-                    <div class="col-sm-4">
+                    <div class="col-sm-3">
                       <label class="form-label semibold" for="">Centro de custo</label>
                       <p>000.000.000/0000-00</p>
+                    </div>
+                    <div class="col-sm-3">
+                      <div class="checkbox-toggle mt-md pt-sm">
+                        <input type="checkbox" id="check-qtd-niveis" checked/>
+                        <label class="form-label" for="check-qtd-niveis">Ativo</label>
+                      </div>
                     </div>
                   </div>
                 </div>
