--- a/pages/posto/unidade.html
+++ b/pages/posto/unidade.html
@@ -101,7 +101,7 @@
                           <label class="form-label semibold" for="">Situação</label>
                           <div class="form-group">
                             <div class="btn-group btn-group-sm" data-toggle="buttons">
-                              <label class="btn btn-secondary active">
+                              <label class="btn btn-secondary-outline active">
                                 <input type="radio" name="options" id="" autocomplete="off" checked="">
                                 Todos
                               </label>
@@ -258,12 +258,12 @@
 
               <section class="card card-default mt-md">
                 <header class="card-header">
-                  <h5 class="semibold"><i class="fa fa-building-o mr-xs" aria-hidden="true"></i> Dados da unidade
+                  <h5 class="semibold"><i class="fa fa-building-o mr-xs" aria-hidden="true"></i> Dados
                   </h5>
                 </header>
                 <div class="card-block">
                   <div class="row">
-                    <div class="col-sm-4">
+                    <div class="col-sm-3">
                       <label class="form-label semibold" for="">Unidade <span
                               class="semibold text-danger h4">*</span></label>
                       <select class="select2 select2-arrow">
@@ -273,13 +273,19 @@
                         <option>Águas claras</option>
                       </select>
                     </div>
-                    <div class="col-sm-4">
+                    <div class="col-sm-3">
                       <label class="form-label semibold" for="">CNPJ</label>
                       <p>000.000.000/0000-00</p>
                     </div>
-                    <div class="col-sm-4">
+                    <div class="col-sm-3">
                       <label class="form-label semibold" for="">Centro de custo</label>
                       <p>Centro de custo</p>
+                    </div>
+                    <div class="col-sm-3">
+                      <div class="checkbox-toggle mt-md pt-sm">
+                        <input type="checkbox" id="check-qtd-niveis" checked/>
+                        <label class="form-label" for="check-qtd-niveis">Ativo</label>
+                      </div>
                     </div>
                   </div>
                 </div>
@@ -288,7 +294,7 @@
 
               <section class="card card-default mt-md">
                 <header class="card-header">
-                  <h5 class="semibold"><i class="fa fa-map-marker mr-xs" aria-hidden="true"></i> Localização da unidade
+                  <h5 class="semibold"><i class="fa fa-map-marker mr-xs" aria-hidden="true"></i> Localização
                   </h5>
                 </header>
                 <div class="card-block">
@@ -449,7 +455,7 @@
 </div><!--.page-content-->
 
 
-<!-- Modal detalha posto -->
+<!-- Modal detalha -->
 <div class="modal fade" id="ModalDetalhaUnidade" tabindex="-1" role="dialog" aria-labelledby="ModalDetalhaUnidade">
   <div class="modal-dialog modal-lg" role="document">
     <div class="modal-content">
@@ -460,23 +466,26 @@
       </div>
       <div class="modal-body">
 
-
-        <section class="card card-default mt-md">
+        <section class="card card-default">
           <header class="card-header">
-            <h5 class="semibold"><i class="fa fa-building-o mr-xs" aria-hidden="true"></i> Dados do posto
+            <h5 class="semibold"><i class="fa fa-building-o mr-xs" aria-hidden="true"></i> Dados
             </h5>
           </header>
           <div class="card-block">
             <div class="row">
-              <div class="col-sm-4">
+              <div class="col-sm-3">
+                <label class="form-label semibold" for="">Situação</label>
+                <p class="text-success">Ativo</p>
+              </div>
+              <div class="col-sm-3">
                 <label class="form-label semibold" for="">Unidade</label>
                 <p>Águas Claras</p>
               </div>
-              <div class="col-sm-4">
+              <div class="col-sm-3">
                 <label class="form-label semibold" for="">CNPJ</label>
                 <p>000.000.000/0000-00</p>
               </div>
-              <div class="col-sm-4">
+              <div class="col-sm-3">
                 <label class="form-label semibold" for="">Centro de custo</label>
                 <p>000.000.000/0000-00</p>
               </div>
@@ -487,7 +496,7 @@
 
         <section class="card card-default mt-md">
           <header class="card-header">
-            <h5 class="semibold"><i class="fa fa-map-marker mr-xs" aria-hidden="true"></i> Localização do posto
+            <h5 class="semibold"><i class="fa fa-map-marker mr-xs" aria-hidden="true"></i> Localização
             </h5>
           </header>
           <div class="card-block">
@@ -526,7 +535,7 @@
           </div>
         </section>
 
-        <section class="card card-default mt-lg">
+        <section class="card card-default mt-md">
           <header class="card-header">
             <h5 class="semibold"><i class="fa fa-commenting mr-xs" aria-hidden="true"></i> Contatos
             </h5>
