Ajustes em posto

--- a/pages/posto/posto--editar.html
+++ b/pages/posto/posto--editar.html
@@ -90,7 +90,7 @@
 
               <section class="card card-default mt-md">
                 <header class="card-header">
-                  <h5 class="semibold"><i class="fa fa-building-o mr-xs" aria-hidden="true"></i> Dados do posto
+                  <h5 class="semibold"><i class="fa fa-building-o mr-xs" aria-hidden="true"></i> Dados
                   </h5>
                 </header>
                 <div class="card-block">
