--- a/pages/posto/posto.html
+++ b/pages/posto/posto.html
@@ -504,7 +504,7 @@
 
               <section class="card card-default mt-md">
                 <header class="card-header">
-                  <h5 class="semibold"><i class="fa fa-building-o mr-xs" aria-hidden="true"></i> Dados do posto
+                  <h5 class="semibold"><i class="fa fa-building-o mr-xs" aria-hidden="true"></i> Dados
                   </h5>
                 </header>
                 <div class="card-block">
@@ -533,9 +533,15 @@
                       <label class="form-label semibold" for="">CNPJ</label>
                       <p>000.000.000/0000-00</p>
                     </div>
-                    <div class="col-sm-8">
+                    <div class="col-sm-4">
                       <label class="form-label semibold" for="">Centro de custo</label>
                       <p>Centro de custo</p>
+                    </div>
+                    <div class="col-sm-4">
+                      <div class="checkbox-toggle mt-md pt-sm">
+                        <input type="checkbox" id="check-qtd-niveis" checked/>
+                        <label class="form-label" for="check-qtd-niveis">Ativo</label>
+                      </div>
                     </div>
                   </div>
                 </div>
@@ -544,7 +550,7 @@
 
               <section class="card card-default mt-md">
                 <header class="card-header">
-                  <h5 class="semibold"><i class="fa fa-map-marker mr-xs" aria-hidden="true"></i> Localização do posto
+                  <h5 class="semibold"><i class="fa fa-map-marker mr-xs" aria-hidden="true"></i> Localização
                   </h5>
                 </header>
                 <div class="card-block">
@@ -654,11 +660,11 @@
                               <ul class="chart-legend-list">
                                 <li>
                                   <div class="dot blue"></div>
-                                  (00) 0000-0000
+                                  (00) 0000-0000 - Principal
                                 </li>
                                 <li>
                                   <div class="dot blue"></div>
-                                  (00) 0000-0000
+                                  (00) 0000-0000 - Outros
                                 </li>
                               </ul>
                               <p class="divider-top pb-sm">E-mail: luan.almeida@email.com.br</p>
@@ -693,11 +699,11 @@
                               <ul class="chart-legend-list">
                                 <li>
                                   <div class="dot blue"></div>
-                                  (00) 0000-0000
+                                  (00) 0000-0000 - Principal
                                 </li>
                                 <li>
                                   <div class="dot blue"></div>
-                                  (00) 0000-0000
+                                  (00) 0000-0000 - Outros
                                 </li>
                               </ul>
                               <p class="divider-top pb-sm">E-mail: luan.almeida@email.com.br</p>
@@ -865,27 +871,35 @@
 
         <section class="card card-default mt-md">
           <header class="card-header">
-            <h5 class="semibold"><i class="fa fa-building-o mr-xs" aria-hidden="true"></i> Dados do posto
+            <h5 class="semibold"><i class="fa fa-building-o mr-xs" aria-hidden="true"></i> Dados
             </h5>
           </header>
           <div class="card-block">
             <div class="row">
-              <div class="col-sm-3">
-                <label class="form-label semibold" for="">Nome</label>
-                <p>Centro Educacional Católica de Brasília</p>
+              <div class="col-sm-4">
+                <label class="form-label semibold" for="">Situação</label>
+                <p class="text-success">Ativo</p>
               </div>
-              <div class="col-sm-3">
-                <label class="form-label semibold" for="">Unidade</label>
-                <p>Taguatinga Sul</p>
-              </div>
-              <div class="col-sm-3">
+              <div class="col-sm-4">
                 <label class="form-label semibold" for="">CNPJ</label>
                 <p>000.000.000/0000-00</p>
               </div>
-              <div class="col-sm-3">
+              <div class="col-sm-4">
                 <label class="form-label semibold" for="">Centro de custo</label>
                 <p>000.000.000/0000-00</p>
               </div>
+            </div>
+            <div class="row mt-md">
+              <div class="col-sm-6">
+                <label class="form-label semibold" for="">Nome</label>
+                <p>Centro Educacional Católica de Brasília</p>
+              </div>
+              <div class="col-sm-6">
+                <label class="form-label semibold" for="">Unidade</label>
+                <p>Taguatinga Sul</p>
+              </div>
+
+
             </div>
           </div>
         </section>
@@ -984,11 +998,11 @@
                         <ul class="chart-legend-list">
                           <li>
                             <div class="dot blue"></div>
-                            (00) 0000-0000
+                            (00) 0000-0000 - Principal
                           </li>
                           <li>
                             <div class="dot blue"></div>
-                            (00) 0000-0000
+                            (00) 0000-0000 - Outros
                           </li>
                         </ul>
                         <p class="divider-top pb-sm">E-mail: luan.almeida@email.com.br</p>
@@ -1003,11 +1017,11 @@
                         <ul class="chart-legend-list">
                           <li>
                             <div class="dot blue"></div>
-                            (00) 0000-0000
+                            (00) 0000-0000 - Principal
                           </li>
                           <li>
                             <div class="dot blue"></div>
-                            (00) 0000-0000
+                            (00) 0000-0000 - Outros
                           </li>
                         </ul>
                         <p class="divider-top pb-sm">E-mail: luan.almeida@email.com.br</p>
