Ajustes no posto

--- a/pages/posto/posto--editar.html
+++ b/pages/posto/posto--editar.html
@@ -240,11 +240,11 @@
                               <ul class="chart-legend-list">
                                 <li>
                                   <div class="dot blue"></div>
-                                  (00) 0000-0000
+                                  (00) 0000-0000 - Principal
                                 </li>
                                 <li>
                                   <div class="dot blue"></div>
-                                  (00) 0000-0000
+                                  (00) 0000-0000 - Outros
                                 </li>
                               </ul>
                               <p class="divider-top pb-sm">E-mail: luan.almeida@email.com.br</p>
@@ -268,7 +268,7 @@
                                   <div class="dropdown-divider"></div>
                                   <a class="dropdown-item" href="#"><i class="fa fa-ban mr-xs"
                                                                        aria-hidden="true"></i>
-                                    Excluir</a>
+                                    Remover</a>
                                 </div>
                               </div>
                             </td>
@@ -279,11 +279,11 @@
                               <ul class="chart-legend-list">
                                 <li>
                                   <div class="dot blue"></div>
-                                  (00) 0000-0000
+                                  (00) 0000-0000 - Principal
                                 </li>
                                 <li>
                                   <div class="dot blue"></div>
-                                  (00) 0000-0000
+                                  (00) 0000-0000 - Outros
                                 </li>
                               </ul>
                               <p class="divider-top pb-sm">E-mail: luan.almeida@email.com.br</p>
@@ -307,7 +307,7 @@
                                   <div class="dropdown-divider"></div>
                                   <a class="dropdown-item" href="#"><i class="fa fa-ban mr-xs"
                                                                        aria-hidden="true"></i>
-                                    Excluir</a>
+                                    Remover</a>
                                 </div>
                               </div>
                             </td>
