--- a/pages/posto/posto.html
+++ b/pages/posto/posto.html
@@ -688,7 +688,7 @@
                                   <div class="dropdown-divider"></div>
                                   <a class="dropdown-item" href="#"><i class="fa fa-ban mr-xs"
                                                                        aria-hidden="true"></i>
-                                    Excluir</a>
+                                    Remover</a>
                                 </div>
                               </div>
                             </td>
@@ -727,7 +727,7 @@
                                   <div class="dropdown-divider"></div>
                                   <a class="dropdown-item" href="#"><i class="fa fa-ban mr-xs"
                                                                        aria-hidden="true"></i>
-                                    Excluir</a>
+                                    Remover</a>
                                 </div>
                               </div>
                             </td>
