Ajuste em unidades

--- a/pages/posto/posto.html
+++ b/pages/posto/posto.html
@@ -78,11 +78,11 @@
                     <div class="card-block">
                       <div class="row">
 
-                        <div class="col-sm-5">
+                        <div class="col-md-3">
                           <label class="form-label semibold" for="">Nome</label>
                           <input type="text" class="form-control" aria-label="" placeholder="Nome">
                         </div>
-                        <div class="col-sm-3">
+                        <div class="col-md-3">
                           <label class="form-label semibold" for="">Unidade</label>
                           <select class="select2 select2-arrow">
                             <option>Selecione</option>
@@ -91,7 +91,7 @@
                             <option>Águas claras</option>
                           </select>
                         </div>
-                        <div class="col-sm-4">
+                        <div class="col-lg-3">
                           <label class="form-label semibold" for="">Situação</label>
                           <div class="form-group">
                             <div class="btn-group btn-group-sm" data-toggle="buttons">
@@ -104,6 +104,23 @@
                               </label>
                               <label class="btn btn-secondary-outline">
                                 <input type="radio" name="options" id="" autocomplete="off"> Inativo
+                              </label>
+                            </div>
+                          </div>
+                        </div>
+                        <div class="col-lg-3">
+                          <label class="form-label semibold" for="">Pendente</label>
+                          <div class="form-group">
+                            <div class="btn-group btn-group-sm" data-toggle="buttons">
+                              <label class="btn btn-secondary-outline active">
+                                <input type="radio" name="options" id="" autocomplete="off" checked="">
+                                Todos
+                              </label>
+                              <label class="btn btn-secondary-outline">
+                                <input type="radio" name="options" id="" autocomplete="off"> Sim
+                              </label>
+                              <label class="btn btn-secondary-outline">
+                                <input type="radio" name="options" id="" autocomplete="off"> Não
                               </label>
                             </div>
                           </div>
