--- a/pages/posto/unidade.html
+++ b/pages/posto/unidade.html
@@ -93,7 +93,7 @@
                   <section class="card">
                     <div class="card-block">
                       <div class="row">
-                        <div class="col-sm-8">
+                        <div class="col-sm-4">
                           <label class="form-label semibold" for="">Nome</label>
                           <input type="text" class="form-control" aria-label="" placeholder="Nome da unidade">
                         </div>
@@ -110,6 +110,23 @@
                               </label>
                               <label class="btn btn-secondary-outline">
                                 <input type="radio" name="options" id="" autocomplete="off"> Inativo
+                              </label>
+                            </div>
+                          </div>
+                        </div>
+                        <div class="col-sm-4">
+                          <label class="form-label semibold" for="">Pendente</label>
+                          <div class="form-group">
+                            <div class="btn-group btn-group-sm" data-toggle="buttons">
+                              <label class="btn btn-secondary-outline active">
+                                <input type="radio" name="options" id="" autocomplete="off" checked="">
+                                Todos
+                              </label>
+                              <label class="btn btn-secondary-outline">
+                                <input type="radio" name="options" id="" autocomplete="off"> Sim
+                              </label>
+                              <label class="btn btn-secondary-outline">
+                                <input type="radio" name="options" id="" autocomplete="off"> Não
                               </label>
                             </div>
                           </div>
