ajuste em posto

--- a/pages/posto/posto.html
+++ b/pages/posto/posto.html
@@ -194,9 +194,6 @@
                               <a class="dropdown-item" href="posto--editar.html"><i class="fa fa-pencil-square-o mr-xs"
                                                                                     aria-hidden="true"></i>
                                 Editar</a>
-                              <div class="dropdown-divider"></div>
-                              <a class="dropdown-item" href="#"><i class="fa fa-ban mr-xs" aria-hidden="true"></i>
-                                Excluir</a>
                             </div>
                           </div>
                         </td>
@@ -218,9 +215,6 @@
                               <a class="dropdown-item" href="posto--editar.html"><i class="fa fa-pencil-square-o mr-xs"
                                                                                     aria-hidden="true"></i>
                                 Editar</a>
-                              <div class="dropdown-divider"></div>
-                              <a class="dropdown-item" href="#"><i class="fa fa-ban mr-xs" aria-hidden="true"></i>
-                                Excluir</a>
                             </div>
                           </div>
                         </td>
@@ -243,9 +237,6 @@
                               <a class="dropdown-item" href="posto--editar.html"><i class="fa fa-pencil-square-o mr-xs"
                                                                                     aria-hidden="true"></i>
                                 Editar</a>
-                              <div class="dropdown-divider"></div>
-                              <a class="dropdown-item" href="#"><i class="fa fa-ban mr-xs" aria-hidden="true"></i>
-                                Excluir</a>
                             </div>
                           </div>
                         </td>
@@ -268,9 +259,6 @@
                               <a class="dropdown-item" href="posto--editar.html"><i class="fa fa-pencil-square-o mr-xs"
                                                                                     aria-hidden="true"></i>
                                 Editar</a>
-                              <div class="dropdown-divider"></div>
-                              <a class="dropdown-item" href="#"><i class="fa fa-ban mr-xs" aria-hidden="true"></i>
-                                Excluir</a>
                             </div>
                           </div>
                         </td>
@@ -293,9 +281,6 @@
                               <a class="dropdown-item" href="posto--editar.html"><i class="fa fa-pencil-square-o mr-xs"
                                                                                     aria-hidden="true"></i>
                                 Editar</a>
-                              <div class="dropdown-divider"></div>
-                              <a class="dropdown-item" href="#"><i class="fa fa-ban mr-xs" aria-hidden="true"></i>
-                                Excluir</a>
                             </div>
                           </div>
                         </td>
@@ -318,9 +303,6 @@
                               <a class="dropdown-item" href="posto--editar.html"><i class="fa fa-pencil-square-o mr-xs"
                                                                                     aria-hidden="true"></i>
                                 Editar</a>
-                              <div class="dropdown-divider"></div>
-                              <a class="dropdown-item" href="#"><i class="fa fa-ban mr-xs" aria-hidden="true"></i>
-                                Excluir</a>
                             </div>
                           </div>
                         </td>
@@ -343,9 +325,6 @@
                               <a class="dropdown-item" href="posto--editar.html"><i class="fa fa-pencil-square-o mr-xs"
                                                                                     aria-hidden="true"></i>
                                 Editar</a>
-                              <div class="dropdown-divider"></div>
-                              <a class="dropdown-item" href="#"><i class="fa fa-ban mr-xs" aria-hidden="true"></i>
-                                Excluir</a>
                             </div>
                           </div>
                         </td>
@@ -368,9 +347,6 @@
                               <a class="dropdown-item" href="posto--editar.html"><i class="fa fa-pencil-square-o mr-xs"
                                                                                     aria-hidden="true"></i>
                                 Editar</a>
-                              <div class="dropdown-divider"></div>
-                              <a class="dropdown-item" href="#"><i class="fa fa-ban mr-xs" aria-hidden="true"></i>
-                                Excluir</a>
                             </div>
                           </div>
                         </td>
@@ -393,9 +369,6 @@
                               <a class="dropdown-item" href="posto--editar.html"><i class="fa fa-pencil-square-o mr-xs"
                                                                                     aria-hidden="true"></i>
                                 Editar</a>
-                              <div class="dropdown-divider"></div>
-                              <a class="dropdown-item" href="#"><i class="fa fa-ban mr-xs" aria-hidden="true"></i>
-                                Excluir</a>
                             </div>
                           </div>
                         </td>
@@ -418,9 +391,6 @@
                               <a class="dropdown-item" href="posto--editar.html"><i class="fa fa-pencil-square-o mr-xs"
                                                                                     aria-hidden="true"></i>
                                 Editar</a>
-                              <div class="dropdown-divider"></div>
-                              <a class="dropdown-item" href="#"><i class="fa fa-ban mr-xs" aria-hidden="true"></i>
-                                Excluir</a>
                             </div>
                           </div>
                         </td>
@@ -443,9 +413,6 @@
                               <a class="dropdown-item" href="posto--editar.html"><i class="fa fa-pencil-square-o mr-xs"
                                                                                     aria-hidden="true"></i>
                                 Editar</a>
-                              <div class="dropdown-divider"></div>
-                              <a class="dropdown-item" href="#"><i class="fa fa-ban mr-xs" aria-hidden="true"></i>
-                                Excluir</a>
                             </div>
                           </div>
                         </td>
@@ -469,9 +436,6 @@
                               <a class="dropdown-item" href="posto--editar.html"><i class="fa fa-pencil-square-o mr-xs"
                                                                                     aria-hidden="true"></i>
                                 Editar</a>
-                              <div class="dropdown-divider"></div>
-                              <a class="dropdown-item" href="#"><i class="fa fa-ban mr-xs" aria-hidden="true"></i>
-                                Excluir</a>
                             </div>
                           </div>
                         </td>
@@ -494,9 +458,6 @@
                               <a class="dropdown-item" href="posto--editar.html"><i class="fa fa-pencil-square-o mr-xs"
                                                                                     aria-hidden="true"></i>
                                 Editar</a>
-                              <div class="dropdown-divider"></div>
-                              <a class="dropdown-item" href="#"><i class="fa fa-ban mr-xs" aria-hidden="true"></i>
-                                Excluir</a>
                             </div>
                           </div>
                         </td>
@@ -852,12 +813,18 @@
                   <tr>
                     <td>Principal</td>
                     <td>(61) 0000-0000</td>
-                    <td><button type="button" class="btn btn-rounded btn-inline btn-danger-outline btn-sm"><i class="fa fa-times" aria-hidden="true"></i></button></td>
+                    <td>
+                      <button type="button" class="btn btn-rounded btn-inline btn-danger-outline btn-sm"><i
+                              class="fa fa-times" aria-hidden="true"></i></button>
+                    </td>
                   </tr>
                   <tr>
                     <td>Comercial</td>
                     <td>(61) 0000-0000</td>
-                    <td><button type="button" class="btn btn-rounded btn-inline btn-danger-outline btn-sm"><i class="fa fa-times" aria-hidden="true"></i></button></td>
+                    <td>
+                      <button type="button" class="btn btn-rounded btn-inline btn-danger-outline btn-sm"><i
+                              class="fa fa-times" aria-hidden="true"></i></button>
+                    </td>
                   </tr>
                   </tbody>
                 </table>
